# grind-log

./: .gitignore  README.md
backend/: Cargo.toml
backend/my_db/: db  snap.000000000000016F
backend/src/: main.rs
backend/test_db/: db
backend/tests/: integration_tests.rs
frontend/: index.html
frontend/elm-stuff/0.19.1/: Main.elmi  Main.elmo
frontend/src/: Main.elm
