[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.13.0"

[dev-dependencies]
actix-rt = "2"
mock_instant = "0.5.1"
mockall = "0.13.0"

